--- a/test.html
+++ b/test.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><strong>home page</strong> </title>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SPS4TVTVFG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SPS4TVTVFG');
+</script>
+    
 </head>
 <body>
     <strong>KATIE'S Home Page</strong> 
