--- a/test.html
+++ b/test.html
@@ -24,12 +24,12 @@
 
     <li>now</li>
     <li>career</li>
-    <li>future</li>
+    <li>future things</li>
 
     <br>
     <br>
 
-    <strong>katie</strong> is one of social wlefare specialst. 
+    <strong>katie</strong> is one of social wlefare specialist. 
 <p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/awdErJqn8jg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </p>
