--- a/test.html
+++ b/test.html
@@ -29,7 +29,7 @@
     <br>
     <br>
 
-    <strong>katie</strong> is one of social wlefare specialist. 
+    <strong>katie</strong> is one of social welfare specialist. 
 <p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/awdErJqn8jg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </p>
