--- a/test.html
+++ b/test.html
@@ -32,7 +32,7 @@
     <strong>katie</strong> is one of social welfare specialist. 
 <p>
     <img src="http://github.com/wkatiew/webDemo1/open_book-wallpaper-1920x1080.jpg">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/awdErJqn8jg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://youtu.be/NKU7x57yto4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </p>
     <p>
         <div id="disqus_thread"></div>
